--- a/style/extras/mixins.scss
+++ b/style/extras/mixins.scss
@@ -39,6 +39,7 @@
     opacity: 0;
     transition: opacity 0.3s;
     padding-left: 50px;
+    text-shadow: 1px 1px 2px $shadow-color;
 
     > * {
         margin-right: $component-padding;
