Added sorting mechanism for every item

--- a/style/components.scss
+++ b/style/components.scss
@@ -15,3 +15,4 @@
 @import "components/settings/settings.scss";
 @import "components/scrollbar/scrollbar.scss";
 @import "components/helper/helper.scss";
+@import "components/copyright/copyright.scss";
