--- a/style/components/consequences/consequences.scss
+++ b/style/components/consequences/consequences.scss
@@ -4,7 +4,7 @@
 
 .fatex__consequences {
     input[type="text"].fatex__consequence__input {
-        border-bottom: 1px solid $primary-color;
+        padding-left: 5px;
     }
 }
 
