--- a/system/templates/actor/character.html
+++ b/system/templates/actor/character.html
@@ -52,6 +52,10 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="desk__copyright">
+                        {{> "systems/fatex/templates/actor/parts/copyright.html"}}
+                    </div>
                 </div>
 
                 {{!--Sidebar--}}
@@ -66,6 +70,5 @@
         <div class="desk__footer">
             {{> "systems/fatex/templates/actor/parts/footer.html"}}
         </div>
-
     </div>
 </form>
