--- a/style/components/sheet/sheet.scss
+++ b/style/components/sheet/sheet.scss
@@ -1,4 +1,4 @@
-.sheet.fatex.fatex__sheet {
+.fatex__sheet {
     font-family: $primary-font;
 
     form {
@@ -20,6 +20,7 @@
 
     input[type="text"] {
         background: transparent;
+        padding: 0;
     }
 }
 
