--- a/system/templates/actor/parts/sidebar/stress.html
+++ b/system/templates/actor/parts/sidebar/stress.html
@@ -1,22 +1,23 @@
 <div class="fatex__stress">
     {{#each stress as |stress stressIndex|}}
-        <div class="fatex__stress__track fatex__stress__track--index-{{stressIndex}}">
-            <h2 class="fatex__headline">
+        <div class="fatex__stress__track fatex__stress__track--index-{{stressIndex}} item" data-item-id="{{stress._id}}">
+            <h2 class="fatex__headline fatex__sortable" data-item-id="{{stress._id}}">
                 <span>{{stress.name}}</span>
                 <div class="fatex__headline__actions fatex__item__actions">
+                    <span class="fatex__item__sort fatex__stress__sort"></span>
                     <span class="fatex__item__settings fatex__stress__settings" data-item="{{stress._id}}"></span>
                     <span class="fatex__item__delete fatex__stress__delete" data-item="{{stress._id}}"></span>
                 </div>
             </h2>
 
-            {{#ifNotEmpty stress.data.data.description}}
+            {{#ifNotEmpty stress.data.description}}
                 <span class="fatex__stress__track__description">
-                    {{stress.data.data.description}}
+                    {{stress.data.description}}
                 </span>
             {{/ifNotEmpty}}
 
             <div class="fatex__stress__track__items fatex__stress__track__items__break">
-                {{#each stress.data.boxes as |box boxIndex|}}
+                {{#each stress.boxes as |box boxIndex|}}
                     <div class="fatex__stress__track__item">
                         <label class="fatex__stress__track__item__box" data-index="{{boxIndex}}" data-item="{{stress._id}}">
                             <span class="fatex__stress__track__item__label">{{box.label}}</span>
@@ -30,7 +31,7 @@
                     {{/ifNth}}
                 {{/each}}
 
-                {{#each stress.data.fillers}}
+                {{#each stress.fillers}}
                     <div class="fatex__stress__track__filler"><div class="fatex__stress__track__item__box"></div></div>
                 {{/each}}
             </div>
