--- a/system/templates/item/aspect-sheet.html
+++ b/system/templates/item/aspect-sheet.html
@@ -1,38 +1,25 @@
 {{> "systems/fatex/templates/item/parts/layout/item-header.html" label="FATEx.Item.Aspect.Name" item=item}}
 
 <div class="fatex__settings">
-    <div class="fatex__setting">
-        <h2 class="fatex__headline fatex__setting__headline">
-            <span>{{localize "FATEx.Item.Aspect.Value"}}</span>
-        </h2>
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+        headline = "FATEx.Item.Aspect.Value"
+        fieldName = "data.value"
+        field = data.value
+    }}
 
-        <label class="fatex__input" for="data.value">
-            <input type="text" name="data.value" class="fatex__setting__input fatex__input__input" value="{{data.value}}" />
-        </label>
-    </div>
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+        headline = "FATEx.Item.Aspect.Label"
+        fieldName = "data.label"
+        field = data.label
+    }}
 
-    <div class="fatex__setting">
-        <h2 class="fatex__headline fatex__setting__headline">
-            <span>{{localize "FATEx.Item.Aspect.Label"}}</span>
-        </h2>
-
-        <label class="fatex__input" for="data.label">
-            <input type="text" name="data.label" class="fatex__setting__input fatex__input__input" value="{{data.label}}" />
-        </label>
-    </div>
-
-    <div class="fatex__setting">
-        <h2 class="fatex__headline fatex__setting__headline">
-            <span>{{localize "FATEx.Item.Aspect.Description"}}</span>
-        </h2>
-
-        <label class="fatex__input" for="data.description">
-            <span class="fatex__setting__help">{{localize "FATEx.Item.Aspect.DescriptionHelp"}}</span>
-            <input type="text" name="data.description" class="fatex__setting__input fatex__input__input" value="{{data.description}}" />
-        </label>
-    </div>
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+        headline = "FATEx.Item.Aspect.Description"
+        help = "FATEx.Item.Aspect.DescriptionHelp"
+        fieldName = "data.description"
+        field = data.description
+    }}
 </div>
-
 
 {{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
 
