--- a/system/templates/item/stress-sheet.html
+++ b/system/templates/item/stress-sheet.html
@@ -61,16 +61,12 @@
         </label>
     </div>
 
-    <div class="fatex__setting">
-        <h2 class="fatex__headline fatex__setting__headline">
-            <span>{{localize "FATEx.Item.Stress.Description"}}</span>
-        </h2>
-
-        <label class="fatex__input" for="data.description">
-            <span class="fatex__setting__help">{{localize "FATEx.Item.Stress.DescriptionHelp"}}</span>
-            <input type="text" name="data.description" class="fatex__setting__input fatex__input__input" value="{{data.description}}" />
-        </label>
-    </div>
+    {{> "systems/fatex/templates/item/parts/settings/setting-input.html"
+        headline = "FATEx.Item.Stress.Description"
+        help = "FATEx.Item.Stress.DescriptionHelp"
+        fieldName = "data.description"
+        field = data.description
+    }}
 </div>
 
 {{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
