--- a/system/templates/actor/parts/tabloid/aspects.html
+++ b/system/templates/actor/parts/tabloid/aspects.html
@@ -8,13 +8,13 @@
 
     {{#each aspects as |aspect aspectIndex|}}
         <div class="fatex__aspect fatex__input fatex__sortable item" data-item-id="{{aspect._id}}">
-            <label class="fatex__aspect__label fatex__input__label">{{aspect.data.label}}</label>
+            <label class="fatex__aspect__label fatex__input__label">{{default aspect.data.label ""}}</label>
 
             <div class="fatex__aspect__actions_wrapper">
                 <div class="fatex__aspect__input fatex__input__input">{{default aspect.data.value "&nbsp;"}}</div>
 
                 <div class="fatex__aspect__actions fatex__item__actions">
-                    <span class="fatex__item__sort fatex__aspect__sort"></span>
+                    <span class="fatex__aspect__sort fatex__item__sort"></span>
                     <span class="fatex__aspect__settings fatex__item__settings" data-item="{{aspect._id}}"></span>
                     <span class="fatex__aspect__delete fatex__item__delete" data-item="{{aspect._id}}"></span>
                 </div>
