--- a/system/templates/actor/parts/tabloid/consequences.html
+++ b/system/templates/actor/parts/tabloid/consequences.html
@@ -2,27 +2,23 @@
     <h2 class="fatex__consequences__headline fatex__headline">
         <span>{{localize "FATEx.Sheet.Consequences"}}</span>
         <div class="fatex__headline__actions fatex__item__actions">
-            <span class="fatex__item__add fatex__consequences__add"></span>
+            <span class="fatex__item__add fatex__consequence__add"></span>
         </div>
     </h2>
 
     {{#each consequences as |consequence consequenceIndex|}}
-        <div class="fatex__consequence fatex__input fatex__sortable item" data-item-id="{{consequence._id}}">
+        <div class="fatex__consequence fatex__input fatex__input--icon fatex__sortable item" data-item-id="{{consequence._id}}">
             <label class="fatex__consequence__label fatex__input__label">{{consequence.data.label}}</label>
 
             <div class="fatex__consequence__actions_wrapper">
-                <div class="fatex__consequence__input fatex__input__input">{{default consequence.data.value "&nbsp;"}}</div>
+                <div class="fatex__aspect__input fatex__input__input">{{default consequence.data.value "&nbsp;"}}</div>
 
-                <div class="fatex__consequence fatex__input fatex__input--icon">
+                {{#if consequence.data.icon}}
                     <label class="fatex__consequence__icon fatex__input__icon">{{consequence.data.icon}}</label>
-                    <label class="fatex__consequence__label fatex__input__label">{{consequence.data.label}}</label>
-                    <div class="fatex__consequence__input fatex__input__input">
-                        {{default consequence.data.value "&nbsp;"}}
-                    </div>
-                </div>
+                {{/if}}
 
                 <div class="fatex__consequence__actions fatex__item__actions">
-                    <span class="fatex__item__sort fatex__consequence__sort"></span>
+                    <span class="fatex__consequence__sort fatex__item__sort"></span>
                     <span class="fatex__consequence__settings fatex__item__settings" data-item="{{consequence._id}}"></span>
                     <span class="fatex__consequence__delete fatex__item__delete" data-item="{{consequence._id}}"></span>
                 </div>
