Basic version of skills working

--- a/style/components/copyright/copyright.scss
+++ b/style/components/copyright/copyright.scss
@@ -2,5 +2,9 @@
     padding: $component-padding;
     font-size: 10px;
     text-align: center;
-    color: $primary-color
+    color: $primary-color;
+
+    p {
+        margin: 0;
+    }
 }
