--- a/style/components.scss
+++ b/style/components.scss
@@ -16,3 +16,4 @@
 @import "components/scrollbar/scrollbar.scss";
 @import "components/helper/helper.scss";
 @import "components/copyright/copyright.scss";
+@import "components/skills/skills.scss";
