--- a/system/templates/actor/parts/tabs/skills.html
+++ b/system/templates/actor/parts/tabs/skills.html
@@ -1,3 +1,24 @@
-<div class="fatex-skills">
+<div class="fatex__skills">
+    {{#each skills as |skill skillIndex|}}
+        <div class="fatex__skill fatex__input fatex__input--icon fatex__sortable item" data-item-id="{{skill._id}}">
 
+            <div class="fatex__skill__actions_wrapper">
+                <div class="fatex__skill__input fatex__input__input">{{default skill.name "&nbsp;"}}</div>
+
+                {{#ifNotEmpty skill.data.level}}
+                    <label class="fatex__skill__icon fatex__input__icon">+{{skill.data.level}}</label>
+                {{/ifNotEmpty}}
+
+                <div class="fatex__skill__actions fatex__item__actions">
+                    <span class="fatex__skill__sort fatex__item__sort"></span>
+                    <span class="fatex__skill__settings fatex__item__settings" data-item="{{skill._id}}"></span>
+                    <span class="fatex__skill__delete fatex__item__delete" data-item="{{skill._id}}"></span>
+                </div>
+            </div>
+        </div>
+    {{/each}}
+
+    <div class="fatex__skill__track fatex__helper__editmode">
+        <h2 class="fatex__headline fatex__headline--center fatex__skill__add">+</h2>
+    </div>
 </div>
