--- a/system/templates/actor/character.html
+++ b/system/templates/actor/character.html
@@ -24,8 +24,8 @@
                     {{!--Tabs--}}
                     <div class="desk__tabs fatex__tabs">
                         <nav class="fatex_tabs__navigation" data-group="primary">
-                            <a class="fatex_tabs__navigation__item item active" data-tab="skills">{{localize "FATEx.Sheet.Tabs.Skills"}}</a>
-                            <a class="fatex_tabs__navigation__item item" data-tab="stunts">{{localize "FATEx.Sheet.Tabs.Stunts"}}</a>
+                            <a class="fatex_tabs__navigation__item item active" data-tab="skills">{{localize "FATEx.Sheet.Tabs.SkillsStunts"}}</a>
+                            {{!--<a class="fatex_tabs__navigation__item item" data-tab="stunts">{{localize "FATEx.Sheet.Tabs.Stunts"}}</a>--}}
                             <a class="fatex_tabs__navigation__item item" data-tab="extras">{{localize "FATEx.Sheet.Tabs.Extras"}}</a>
                             <a class="fatex_tabs__navigation__item item" data-tab="bio">{{localize "FATEx.Sheet.Tabs.Bio"}}</a>
                         </nav>
