--- a/style/components/helper/helper.scss
+++ b/style/components/helper/helper.scss
@@ -7,3 +7,11 @@
         opacity: 1;
     }
 }
+
+.fatex__helper__editmode--vanish {
+    display: none;
+
+    .fatex__helper--enable-editmode & {
+        display: inherit;
+    }
+}
